fix alignment of ios device video

--- a/gameshowCode/css/mainVideoPage.css
+++ b/gameshowCode/css/mainVideoPage.css
@@ -42,17 +42,25 @@
 }
 
 .video-feed {
+	position:relative;
 	width: 100%;
     aspect-ratio: 16/9;
 	background: #120810;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 .video-feed > video {
+	position:absolute;
+	left:0;
+	top:0;
     width:100%;
     height:100%;
+}
+
+.video-feed > svg {
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform:translate(-50%,-50%);
 }
 
 .card-footer {
